# any_llm_agent_swarm_cli

./: .coveragerc  .gitignore  CONTRIBUTING.md  LICENSE  README.md  agentswarm_cli_config.py  agentswarm_design.md  agentswarm_implementation_examples.py  pyproject.toml  pytest.ini  requirements-dev.txt
agentswarm/: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  __main__.py  py.typed  requirements.txt  setup.cfg  setup.py
agentswarm/agentswarm/: __init__.py
agentswarm/agentswarm/cli/: __init__.py  main.py
agentswarm/agentswarm/core/: message.py  swarm.py
agentswarm/agentswarm/processing/: checkpoint_manager.py  file_scanner.py
agentswarm/agentswarm/processing/processing/: README.md  content_extractor.py
agentswarm/agentswarm/providers/: __init__.py  cohere_provider.py  mistral_provider.py  ollama_provider.py
agentswarm/agentswarm/utils/: config.py
agentswarm/core/: __init__.py  agent.py  task.py
agentswarm/examples/: basic_swarm.py
agentswarm/processing/: batch_processor.py  examples.py  progress_tracker.py  test_processing.py
agentswarm/processing/processing/: __init__.py
agentswarm/providers/: factory.py  requirements.txt
agentswarm/tests/: conftest.py  test_agent.py  test_message.py  test_task.py
agentswarm/utils/: __init__.py  logging.py
cli/agentswarm_cli/: main.py
processing/: orchestrator.py
providers/: README.md  __init__.py  anthropic_provider.py  azure_openai_provider.py  base.py  example.py  google_gemini_provider.py  openai_provider.py
tests/: README.md  __init__.py  conftest.py  test_anthropic_provider.py  test_azure_provider.py  test_batch_processor.py  test_checkpoint_manager.py  test_cli.py  test_cohere_provider.py  test_content_extractor.py  test_core_agent.py  test_core_message.py  test_core_swarm.py  test_core_task.py  test_file_scanner.py  test_google_provider.py  test_init.py  test_mistral_provider.py  test_ollama_provider.py  test_openai_provider.py  test_orchestrator.py  test_progress_tracker.py  test_providers_base.py  test_providers_factory.py  test_swarm.py  test_utils_config.py  test_utils_logging.py
