[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentswarm"
version = "1.0.0"
description = "Agent Swarm CLI - Przetwarzaj duże zbiory plików z LLM"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "AgentSwarm Team", email = "team@agentswarm.dev"}
]
keywords = ["llm", "ai", "agents", "swarm", "batch-processing", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "aiofiles>=23.0.0",
    
    # Security
    "keyring>=24.0.0",
    "cryptography>=41.0.0",
    
    # Async/Processing
    "asyncio-throttle>=1.0.0",
    "tqdm>=4.65.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
# Individual providers
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.21.0"]
google = ["google-generativeai>=0.3.0"]
cohere = ["cohere>=4.0.0"]
mistral = ["mistralai>=0.0.12"]
ollama = ["ollama>=0.1.0"]
azure = ["azure-openai>=1.0.0"]

# All providers
all = [
    "openai>=1.0.0",
    "anthropic>=0.21.0",
    "google-generativeai>=0.3.0",
    "cohere>=4.0.0",
    "mistralai>=0.0.12",
    "ollama>=0.1.0",
    "azure-openai>=1.0.0",
]

# Development
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[project.scripts]
agentswarm = "agentswarm.cli.main:app"
asw = "agentswarm.cli.main:app"

[project.urls]
Homepage = "https://github.com/agentswarm/agentswarm"
Documentation = "https://agentswarm.readthedocs.io"
Repository = "https://github.com/agentswarm/agentswarm"
Issues = "https://github.com/agentswarm/agentswarm/issues"
Changelog = "https://github.com/agentswarm/agentswarm/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/agentswarm"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/README.md",
    "/LICENSE",
]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# mypy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = """
    -v
    --tb=short
    --strict-markers
    --cov=agentswarm
    --cov-report=term-missing
    --cov-report=html:htmlcov
"""
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/agentswarm"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# Ruff configuration
[tool.ruff]
target-version = "py39"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/*" = ["D", "S"]
"__init__.py" = ["D104"]
