[metadata]
name = agentswarm
version = 0.1.0
author = AgentSwarm Team
author_email = team@agentswarm.dev
description = A powerful multi-agent orchestration framework for building distributed AI systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agentswarm/agentswarm
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed
keywords = agents ai multi-agent swarm orchestration distributed automation

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests
    tests.*
    docs
    docs.*

[options.package_data]
agentswarm = py.typed, *.yaml, *.yml, *.json

[options.entry_points]
console_scripts =
    agentswarm = agentswarm.cli.main:app
